[gd_scene load_steps=10 format=3 uid="uid://ft08gk816ihy"]

[ext_resource type="Script" path="res://minigames/frutas/main.gd" id="1_tld6u"]
[ext_resource type="PackedScene" uid="uid://cfgluxwxqvwab" path="res://minigames/frutas/fruta.tscn" id="2_ussx5"]
[ext_resource type="Texture2D" uid="uid://bpnqaokml3gi5" path="res://minigames/frutas/wood_plank_texture.png" id="3_fu106"]
[ext_resource type="AudioStream" uid="uid://bmvgvijxbqbcs" path="res://minigames/frutas/Sonido_victoria_frutas.mp3" id="4_nykxr"]

[sub_resource type="Curve2D" id="Curve2D_jqhvf"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, 0, 288, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 720, 0, 0, 0, 0, 0, 720, 288)
}
point_count = 4

[sub_resource type="SegmentShape2D" id="SegmentShape2D_8w6no"]
b = Vector2(-720, 2.08165e-12)

[sub_resource type="SegmentShape2D" id="SegmentShape2D_33t3u"]
a = Vector2(-120, 0)
b = Vector2(840, 0)

[sub_resource type="SegmentShape2D" id="SegmentShape2D_u0r1r"]
b = Vector2(-1400, 0)

[sub_resource type="SegmentShape2D" id="SegmentShape2D_o0w5u"]
a = Vector2(2.08165e-12, 2.08165e-12)
b = Vector2(1400, 0)

[node name="Main" type="Node2D"]
script = ExtResource("1_tld6u")
fruta_scene = ExtResource("2_ussx5")

[node name="ColorRect" type="ColorRect" parent="."]
offset_right = 720.0
offset_bottom = 1280.0
mouse_filter = 2
color = Color(0.380392, 0.239216, 0, 1)

[node name="SpawnPath" type="Path2D" parent="."]
scale = Vector2(1, 0.527778)
curve = SubResource("Curve2D_jqhvf")

[node name="SpawnLocation" type="PathFollow2D" parent="SpawnPath"]
position = Vector2(0, 288)
rotation = -1.5708

[node name="FrutaTimer" type="Timer" parent="."]
wait_time = 0.5

[node name="Walls" type="StaticBody2D" parent="."]

[node name="Up" type="CollisionShape2D" parent="Walls"]
position = Vector2(2.08165e-12, 2.08165e-12)
rotation = 3.14159
shape = SubResource("SegmentShape2D_8w6no")
disabled = true
one_way_collision = true

[node name="Killbox" type="Area2D" parent="."]

[node name="Down" type="CollisionShape2D" parent="Killbox"]
position = Vector2(0, 1400)
shape = SubResource("SegmentShape2D_33t3u")

[node name="Right" type="CollisionShape2D" parent="Killbox"]
position = Vector2(840, 0)
rotation = -1.5708
shape = SubResource("SegmentShape2D_u0r1r")

[node name="Left" type="CollisionShape2D" parent="Killbox"]
position = Vector2(-120, 0)
rotation = 1.5708
shape = SubResource("SegmentShape2D_o0w5u")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(360, 968.803)
scale = Vector2(0.707031, 0.819928)
texture = ExtResource("3_fu106")

[node name="Sprite2D2" type="Sprite2D" parent="."]
position = Vector2(361, 207.75)
rotation = 3.14159
scale = Vector2(0.715625, 0.76925)
texture = ExtResource("3_fu106")

[node name="Musica_victoria" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_nykxr")

[connection signal="timeout" from="FrutaTimer" to="." method="_on_fruta_timer_timeout"]
[connection signal="body_entered" from="Killbox" to="." method="_on_killbox_body_entered"]
